Addresssing CSS contrast issues on Accordion and Sortable Table

--- a/content-assets/wai-aria-practices/styles.css
+++ b/content-assets/wai-aria-practices/styles.css
@@ -464,6 +464,10 @@ footer + .info {
   color: white;
 }
 
+.accordion-trigger:hover {
+  color: black;
+}
+
 .combobox input, #cb-textbox-1 {
   font-size: 16px; /* Any smaller a font-size and iOS will zoom in on focus */
 }
@@ -603,6 +607,11 @@ dl.faq button,
 }
 #treegrid th {
   color: black;
+}
+
+/* Sortable table example */
+table.sortable th button:hover {
+  background-color: #003366;
 }
 
 /* Read This First Banner */
